# msb-client-websocket-c

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  README.md  c_client_build_cmake.sh  c_client_get_coverage.sh  c_client_prepare_machine.sh  travis.yml
.github/: CONTRIBUTING.md  MAINTAINERS.md
cppwrapping/: CMakeLists.txt  MsbClientC_CppWrapper.cpp  MsbClientC_CppWrapper.hpp  MsbClientC_CppWrapper_Test.cpp
src/: MsbClientC.c  MsbClientC.h  MsbObject.c
src/rest/: einfl.c  helpers.h  schll.c  uri.c
src/websocket/: websocket.c  websocket.h
test/: CMakeLists.txt  integration_flow.json
test/src/: example.c  integration_flow.h  main.c  rest.c  test.c
test/src/sput-1.4.0/: LICENSE  sput.h
